Fixed invalid HTML

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body class="u-bgcolor-ui-black">
     <div class="c-intro">
       <h1 class="o-type-display-large">Canvas Fireworks</h1>
-      <p class="o-type-base">Click to Start</a>
+      <p class="o-type-base">Click to Start</p>
     </div>
     <canvas id="fireworks-canvas"></canvas>
     <script src="./scripts/utils.js"></script>
